# cse498-build-system

./: Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml
.github/workflows/: deployment.yml  integration.yml
scripts/: entrypoint.sh
src/: CMakeLists.txt  helloworld.cpp  main.cpp  math_utils.cpp  math_utils.hpp
tests/: test_math_utils.cpp
